<resources>
    <string name="app_name">DemosApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="NoInternet">Please turn on cellular data or correct Wi-Fi settings</string>
    <string name="msg_header">Message</string>
    <string name="msg_connection">Internet connection not available.</string>
    <string name="msg_location">location service not available.</string>
    <string name="msg_server">The web server is not responding. Try after some time.</string>
    <string name="autocomplete">AutoComplete Demo</string>
    <string name="image_process">Image Process</string>
    <string name="app_tracker">App Tracker</string>
    <string name="animation">Animation</string>
    <string name="tools">Tools</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="svg_animation">SVG Animation</string>
    <string name="device_manger">Device Manager</string>
    <string name="enable_device_admin">Enable Device Admin</string>
    <string name="lock_device">Lock Device</string>
    <string name="reset_device">Reset Device</string>
    <string name="set_password">Set Password</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <!-- Setup activity -->
    <string name="setup_policy_instruction">Set up device administration policy:</string>
    <string name="setup_password_quality">Select a password quality</string>
    <string name="setup_password_length">Set min. pw. length</string>
    <string name="setup_password_uppercase">Set min. pw. uppercase</string>
    <string name="setup_action_activate">Activate</string>
    <string name="setup_message_activate">Press button to activate the device administrator</string>
    <string name="setup_action_set_policy">Enforce Policy</string>
    <string name="setup_message_set_policy">Press button to enforce specified policy.</string>
    <string name="setup_action_enforce_policy">Update Password</string>
    <string name="setup_message_enforce_policy">Current password doesn\'t conform to the policy.\nPress button to update password.</string>
    <string name="setup_action_go_secured">Go</string>
    <string name="setup_message_go_secured">Current password conforms to policy.  Device is protected.\nPress button to access secured content.</string>

    <!-- View policy activity -->
    <string name="view_policy_instruction">Review device administration policy:</string>
    <string name="view_password_quality">Password quality:</string>
    <string name="view_password_length">Minimum password length:</string>
    <string name="view_password_uppercase">Minimum password upper case:</string>

    <string name="secure_message">Device is properly secured. Access is granted to secured content</string>
    <string name="device_admin_activation_message">Provide a message here explaining why an application needs to become a device administrator.</string>
    <string name="browser">Browser</string>
    <string name="crop">Crop</string>
    <string name="result_image_desc">crop result</string>
    <string name="main_button_select_image">Select Image</string>
    <string name="main_activity_desciption">Sample activity to start image cropping.\nExample: User profile activity to select avatar.</string>

    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
    <string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
    <string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
    <string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
    <string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
    <string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
    <string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
    <string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
    <string name="drawer_option_toggle_multitouch">Multitouch: %1s</string>
    <string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
    <string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>
    <string name="search">Search</string>

</resources>
